--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "spec/externals/igloo"]
-	path = spec/externals/igloo
-	url = https://github.com/joakimkarlsson/igloo.git
+[submodule "externals/igloo"]
+	path = externals/igloo
+	url = https://github.com/joakimkarlsson/igloo
