Switch specs to use bandit instead of igloo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "externals/igloo"]
-	path = externals/igloo
-	url = https://github.com/joakimkarlsson/igloo
+[submodule "externals/bandit"]
+	path = externals/bandit
+	url = https://github.com/joakimkarlsson/bandit.git
