--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .idea
 spec/run.out*
-TreeSitter.xcodeproj/project.xcworkspace
-TreeSitter.xcodeproj/xcuserdata
+*.xcodeproj/project.xcworkspace
+*.xcodeproj/xcuserdata
