--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "externals/bandit"]
 	path = externals/bandit
 	url = https://github.com/joakimkarlsson/bandit.git
+[submodule "externals/gyp"]
+	path = externals/gyp
+	url = https://github.com/svn2github/gyp.git
