Use boost regex on travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: cpp
 compiler:
     - gcc
+before_install:
+  - sudo apt-get install libboost-regex1.48-dev
+env:
+  - CXXFLAGS='-D USE_BOOST_REGEX' LDFLAGS='-lboost_regex'
 install: script/configure.sh
 script: script/test.sh
