Add configure flag for excluding libprofiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ compiler:
     - gcc
 before_install:
   - sudo apt-get install libboost-regex1.48-dev
-install: script/configure.sh -D USE_BOOST_REGEX
+install: script/configure.sh -D USE_BOOST_REGEX=true -D USE_LIBPROFILER=false
 script: script/test_all.sh
