--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "externals/gyp"]
 	path = externals/gyp
 	url = https://github.com/svn2github/gyp.git
+[submodule "externals/utf8proc"]
+	path = externals/utf8proc
+	url = https://github.com/julialang/utf8proc
