Drop extensions from script filenames

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ addons:
     packages:
     - libboost-regex-dev
 
-install: script/configure.sh -D USE_BOOST_REGEX=true -D USE_LIBPROFILER=false
+install: script/configure -D USE_BOOST_REGEX=true -D USE_LIBPROFILER=false
 script: script/ci
