Import error corpus entries from grammar repos
Now that error recovery requires no input for the grammar author, it shouldn't
be tested in the individual grammar repos.

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ externals/cpplint.py
 out
 *.pyc
 
-spec/fixtures/*
-!spec/fixtures/.gitkeep
+spec/fixtures/grammars/*
+!spec/fixtures/grammars/.gitkeep
