--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,9 @@ branches:
 platform:
   - x86
 
+init:
+  - git config --global core.autocrlf false
+
 install:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
   - script\configure.cmd
