--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: rust
 rust:
   - stable
 
+env:
+  - RUST_TREE_SITTER_TEST=1
+
+before_install:
+  - ./script/fetch-test-fixtures.sh
+
 branches:
   only:
   - master
