--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,10 @@ include = [
   "/vendor/tree-sitter/src/runtime/*",
 ]
 
+[dependencies]
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
+
 [build-dependencies]
 cc = "1.0"
