--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,24 @@
-sudo: false
-dist: trusty
+sudo: required
 language: cpp
-compiler:
-- gcc
-
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - g++-5
-    - clang
-
-install:
-- export CXX="g++-5"
-- scan-build script/configure
-
-script:
-- script/ci
+services:
+  - docker
 
 cache:
   directories:
-  - test/fixtures/grammars
+    - $HOME/docker
+
+before_cache:
+  # Save tagged docker images
+  - >
+    mkdir -p $HOME/docker && docker images -a --filter='dangling=false' --format '{{.Repository}}:{{.Tag}} {{.ID}}'
+    | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
+
+before_install:
+  # Load cached docker images
+  - if [[ -d $HOME/docker ]]; then ls $HOME/docker/*.tar.gz | xargs -I {file} sh -c "zcat {file} | docker load"; fi
+
+script:
+  - docker build -t tree-siter .
 
 branches:
   only:
