--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ libloading = "0.5"
 rusqlite = "0.14.0"
 serde = "1.0"
 serde_derive = "1.0"
-serde_json = "1.0"
 tree-sitter = "0.3.1"
 regex-syntax = "0.6.4"
+
+[dependencies.serde_json]
+version = "1.0"
+features = ["preserve_order"]
