--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ lazy_static = "1.2.0"
 smallbitvec = "2.3.0"
 clap = "2.32"
 dirs = "1.0.2"
+hashbrown = "0.1"
 ignore = "0.4.4"
 libloading = "0.5"
 rusqlite = "0.14.0"
@@ -20,3 +21,7 @@ regex-syntax = "0.6.4"
 [dependencies.serde_json]
 version = "1.0"
 features = ["preserve_order"]
+
+[dependencies.log]
+version = "0.4.6"
+features = ["std"]
