--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - TREE_SITTER_TEST=1
 
 before_install:
-  - ./script/fetch-test-fixtures.sh
+  - ./script/fetch-fixtures
 
 branches:
   only:
