--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,14 +5,15 @@ environment:
 build: false
 
 install:
-  - git submodule update --init --recursive
-
+  # Install rust
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init -yv --default-toolchain stable
-  - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
+  - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
   - rustc -vV
   - cargo -vV
 
+  # Install dependencies
+  - git submodule update --init
   - script\fetch-fixtures.cmd
 
 test_script:
@@ -27,3 +28,5 @@ cache:
   - target
   - test\fixtures\grammars
   - C:\Users\appveyor\.cargo
+  - C:\cargo\registry
+  - C:\cargo\git
