--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,15 +31,15 @@ branches:
 
 before_deploy:
   - move target\release\tree-sitter.exe tree-sitter.exe
-  - 7z a tree-sitter-windows-%PLATFORM%.zip tree-sitter.exe
-  - appveyor PushArtifact tree-sitter-windows-%PLATFORM%.zip
+  - 7z a -tgzip tree-sitter-windows-%PLATFORM%.gz tree-sitter.exe
+  - appveyor PushArtifact tree-sitter-windows-%PLATFORM%.gz
 
 deploy:
   description: ''
   provider: GitHub
   auth_token:
     secure: VC9ntV5+inKoNteZyLQksKzWMKXF46P+Jx3JHKVSfF+o1rWtZn2iIHAVsQv5LaUi
-  artifact: /tree-sitter-windows-.*.zip/
+  artifact: /tree-sitter-windows-.*/
   draft: true
   force_update: true
   on:
