--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,6 +10,10 @@ install:
   # Install dependencies
   - git submodule update --init
 
+platform:
+  - x64
+  - x86
+
 test_script:
   # Fetch and regenerate the fixture parsers
   - script\fetch-fixtures.cmd
@@ -23,6 +27,23 @@ test_script:
 branches:
   only:
     - master
+    - /\d+\.\d+\.\d+.*/
+
+before_deploy:
+  - move target\release\tree-sitter.exe tree-sitter.exe
+  - 7z a tree-sitter-windows-%PLATFORM%.zip tree-sitter.exe
+  - appveyor PushArtifact tree-sitter-windows-%PLATFORM%.zip
+
+deploy:
+  description: ''
+  provider: GitHub
+  auth_token:
+    secure: VC9ntV5+inKoNteZyLQksKzWMKXF46P+Jx3JHKVSfF+o1rWtZn2iIHAVsQv5LaUi
+  artifact: /tree-sitter-windows-.*.zip/
+  draft: true
+  force_update: true
+  on:
+    APPVEYOR_REPO_TAG: true
 
 cache:
   - target
