--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,8 @@
 build: false
 install:
+  # Terminate early unless building either a tag or a PR.
+  - if not defined APPVEYOR_REPO_TAG if not defined APPVEYOR_PULL_REQUEST_NUMBER appveyor exit
+
   # Install rust
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - IF "%PLATFORM%" == "x86" rustup-init -y --default-toolchain stable --default-host i686-pc-windows-msvc
