--- a/cli/npm/package.json
+++ b/cli/npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-sitter-cli",
-  "version": "0.14.0-beta4",
+  "version": "0.14.0",
   "author": "Max Brunsfeld",
   "license": "MIT",
   "repository": {
