Revert "CI: move binary instead of copying to preserve executable permission"
This reverts commit 743d18d956e0e8f2909f7fb0123fc17d8f8097fb.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ branches:
   - /\d+\.\d+\.\d+/
 
 before_deploy:
-  - mv target/release/tree-sitter .
+  - cp target/release/tree-sitter .
   - gzip --suffix "-${TRAVIS_OS_NAME}-x64.gz" tree-sitter
 
 deploy:
