Minify JS build with terser

--- a/lib/web/package.json
+++ b/lib/web/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/tree-sitter/tree-sitter#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "terser": "^3.17.0"
   }
 }
