Reorganize language bindings
* Move rust binding: lib/binding -> lib/binding_rust
* Move wasm bindinig: lib/web -> lib/binding_web
* Add wasm readme

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -4,13 +4,14 @@ description = "Rust bindings to the Tree-sitter parsing library"
 version = "0.3.9"
 authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
 license = "MIT"
-readme = "binding/README.md"
+readme = "binding_rust/README.md"
 keywords = ["incremental", "parsing"]
 categories = ["api-bindings", "parsing", "text-editors"]
 
+build = "binding_rust/build.rs"
+
 include = [
-  "/binding/*",
-  "/build.rs",
+  "/binding_rust/*",
   "/Cargo.toml",
   "/include/*",
   "/src/*",
@@ -27,4 +28,4 @@ serde_derive = "1.0"
 cc = "1.0"
 
 [lib]
-path = "binding/lib.rs"
+path = "binding_rust/lib.rs"
