Start work on web UI command

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -33,6 +33,8 @@ serde_derive = "1.0"
 regex-syntax = "0.6.4"
 regex = "1"
 rsass = "^0.9.8"
+tiny_http = "0.6"
+webbrowser = "0.5.1"
 
 [dependencies.tree-sitter]
 version = ">= 0.3.7"
