--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rust:
 matrix:
   include:
     - os: osx
-      env: INSTALL_EMSCRIPTEN=1
+      env: USE_EMSCRIPTEN=1
     - os: linux
       services: docker
 
@@ -14,12 +14,14 @@ before_install:
   - nvm install 10
   - nvm use 10
 
-  # Download emscripten and add it to the PATH
-  - if [ -n "$INSTALL_EMSCRIPTEN" ]; then export wasm_env="$(script/fetch-emscripten)"; fi
+  # Download emscripten and create a shorthand for adding it to the PATH.
+  # Don't add it to the path globally because it overrides the default
+  # clang and node.
+  - if [ -n "$USE_EMSCRIPTEN" ]; then export WASM_ENV="$(script/fetch-emscripten)"; fi
 
 script:
   # Build the WASM binding
-  - (eval "$wasm_env" && script/build-wasm)
+  - (eval "$WASM_ENV" && script/build-wasm)
 
   # Build the CLI
   - cargo build --release
@@ -27,7 +29,7 @@ script:
   # Fetch and regenerate the fixture parsers
   - script/fetch-fixtures
   - script/generate-fixtures
-  - (eval "$wasm_env" && script/generate-fixtures-wasm)
+  - (eval "$WASM_ENV" && script/generate-fixtures-wasm)
 
   # Run the tests
   - export TREE_SITTER_STATIC_ANALYSIS=1
