Use ranges in CharacterSet
This allows large yet dense sets of characters (such as sets defined
by exclusion) to be processed in a reasonable time and space.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ members = [
     "cli",
     "lib",
 ]
+
+[patch.'crates-io']
+unic-char-range = { git = "https://github.com/open-i18n/rust-unic/", branch = "CAD97-patch-1" }
