Instruct parcel to skip analysis of fs calls

--- a/lib/binding_web/package.json
+++ b/lib/binding_web/package.json
@@ -25,6 +25,9 @@
     "url": "https://github.com/tree-sitter/tree-sitter/issues"
   },
   "homepage": "https://github.com/tree-sitter/tree-sitter/tree/master/lib/binding_web",
+  "browser": {
+    "fs": false
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
