Update build steps

--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -4,7 +4,10 @@ steps:
   - task: NodeTool@0
     inputs:
       versionSpec: '8.9'
+  - script: git submodule update --init
+    displayName: 'git submodule update --init'
   - script: npm install -g esy@0.5.8
+    displayName: 'npm install -g esy@0.5.8'
   - script: esy install
     displayName: 'esy install'
   - script: esy build
