--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         ["bash", "-c", "echo", "#{os}"],
         ["bash", "-c", "#{os == 'windows' ? 'CC=x86_64-w64-mingw32-gcc script/build-lib' : 'echo'}"],
         ["bash", "-c", "#{os == 'linux' ? 'CFLAGS=-fPIC script/build-lib' : 'echo'}"],
-        ["bash", "-c", "#{os == 'darwin' ? 'script/build-lib' : 'echo'}"],
-        ["bash", "-c", "#{os == 'macOS' ? 'script/build-lib' : 'echo'}"]
+        ["bash", "-c", "#{os == 'darwin' ? 'CC=gcc script/build-lib' : 'echo'}"],
+        ["bash", "-c", "#{os == 'macOS' ? 'CC=gcc script/build-lib' : 'echo'}"]
     ],
     "install": [
         ["cp", "libtree-sitter.a", "#{self.lib}"],
