--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 readme = "binding_rust/README.md"
 keywords = ["incremental", "parsing"]
 categories = ["api-bindings", "parsing", "text-editors"]
+repository = "https://github.com/tree-sitter/tree-sitter"
 
 build = "binding_rust/build.rs"
 
